--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="./dist/app.js" defer></script>
   </head>
   <body>
+    <input type="text" id="user-input"></input>
     <input type="number" id="num1" placeholder="Number 1" />
     <input type="number" id="num2" placeholder="Number 2" />
     <button>Add!</button>
